--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@
 
 * {
     box-sizing: border-box;
+    font-family: 'Inter', 'Courier New', Courier, monospace;
 }
 
 
@@ -35,16 +36,6 @@
   height: 100%;
 }
 
-/* Set black background color, white text and some padding */
-footer {
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-
-    background-color: #555;
-    color: white;
-    padding: 15px;
-}
 
 /* On small screens, set height to 'auto' for sidenav and grid */
 @media screen and (max-width: 767px) {
@@ -61,25 +52,44 @@ footer {
   margin-top: 10px;
 }
 
+body{
+    background-color: var(--divider-color); 
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+
+footer {
+    position: fixed, absolute;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 25px;
+    bottom: 0;
+
+    background-color: #555;
+    color: white;
+}
+
 header {
     display: flex;
     flex-direction: column;
-    height: 130px;
-    /* width: 1920; */
-    /* height: 133; */
+    overflow: hidden;
+    height: 150px;
 }
 
 .navbar{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: var(--light-primary-color);
-}
-
-/* Remove the navbar's default margin-bottom and rounded borders */
-.navbar {
+    /* Remove the navbar's default margin-bottom and rounded borders */
     margin-bottom: 0;
     border-radius: 0;
+
+    justify-content: flex-start;
+    overflow-y: hidden;
+    align-items: center;
+    background-color: var(--light-primary-color);
+    height: 100%;
 }
 
 .menu {
@@ -89,26 +99,25 @@ header {
     align-items: center;
     height: 50px;
     padding: 15px;
+}
 
-    font-family: 'Inter', 'Courier New', Courier, monospace;
+
+
+.buttons-menu {
+    text-decoration: none;
+    color: var(--text-primary-color);
     font-weight: bold;
 }
 
-.menu-begin {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: space-between;
+.buttons-navbar {
+    text-decoration: none;
+    color: var(--text-primary-color);
+    font-size: 25px;
+    font-weight: bold;
+    margin-right: 50px;
 }
 
-body{
-    background-color: var(--divider-color); 
-    margin: 0;
-    padding: 0;
-    height: 100%;
-}
-
-.buttons-menu:hover {
+.buttons-header-animation:hover {
     background-color: var(--text-primary-color);
     color: var(--secondary-text-color);
     
@@ -117,18 +126,117 @@ body{
     transition: all 0.2s;
 }
 
-a, a:hover {
-    text-decoration: none;
-    color: var(--text-primary-color);
-}
-
 .logo{
-    display: flex;
-    border: dotted;
-    width: 100px;
+    /* display: flex; */
+    /* border: 1px black solid; */
 }
 
-.cover {
-    object-fit: cover;
-    width: 100%;
+.searchBar {
+    min-width: 200px;   
+    width: 700px;
 }
+
+.searchBar::placeholder{
+    color: var(--primary-text-color);
+    opacity: 0.5; /* Firefox */
+}
+
+.searchBar::-ms-input-placeholder { /* Internet Explorer 10-11 */
+    color: var(--primary-text-color);
+    opacity: 0.5; /* Firefox */
+}
+
+.searchBar::-ms-input-placeholder { /* Microsoft Edge */
+    color: var(--primary-text-color);
+    opacity: 0.5; /* Firefox */
+}
+
+.section-show-products{
+    display: flex;
+    flex-direction: column;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-color: var(--divider-color);
+    color: var(--primary-text-color);
+    /* background-color: black; */
+}
+
+.card-container {
+    display: flex;
+    flex-direction: column;
+    border: 1px black solid;
+    text-align: center;
+    overflow: hidden;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    /* height: 250px; */
+    /* width: 600px; */
+}
+
+.teste{
+    /* size: 75%; */
+    /* width: 25%; */
+    display: flex;
+    height: 90px;
+    /* max-height: 50px; */
+    overflow: hidden;
+    border: 5px black solid;
+}
+
+.imagemTeste{
+    object-fit: contain;
+    width: 100%;
+    max-height: 100px;
+    /* max-height: 13rem; 100px */
+    margin-right: 1.1rem; /*10px*/
+    margin-bottom: 10px;
+}
+
+
+.medicine-card-bottom-container {
+    background-color: #fff;
+    display: flex;
+    overflow: hidden;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 10px 20px 10px;
+    border-radius: 0 0 8px 8px;
+}
+
+.medicine-card-bottom-container h3 {
+    color: #4A4A4A;
+    text-align: center;
+    font-size: 14px;
+    font-weight: 700;
+    margin-bottom: 10px;
+    min-height: 40px;
+}
+
+.carousel-card {
+    display: flex;
+    overflow: hidden;;
+}
+
+.carousel-card-image {
+    width: 100%;
+    height: 300px;
+}
+
+#carouselExampleControls{
+    display: flex;
+    height: 300px;
+}
+
+
+/* Adjust the responsive*/
+/* @media (max-width: @screen-xs-max) { 
+
+}
+@media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) { ... }
+@media (min-width: @screen-md-min) and (max-width: @screen-md-max) { ... }
+@media (min-width: @screen-lg-min) { ... } */
+
+
